# ocr-clipboard

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  test.py
src/ocr_clipboard/: __init__.py  __main__.py  ocr_clipboard.py
